--- a/index_WORKS!!!_2sheet_alldatafetch.html
+++ b/index_WORKS!!!_2sheet_alldatafetch.html
@@ -429,7 +429,7 @@
             <input type="text" id="carNumber" required placeholder="e.g. TN 01 AB 1234">
           </div>
           <div class="form-group">
-            <label for="carModel">Car Model</label>
+            <label for="carModel">Car Name</label>
             <input type="text" id="carModel" placeholder="e.g. Hyundai Creta">
           </div>
 
@@ -552,6 +552,7 @@
               <option>Priya</option>
               <option>Sumathi</option>
               <option>Lokesh</option>
+              <option>Surya</option>
             </select>
           </div>
         </div>
